# py-qroma

./: README.md  pyproject.toml
py_qroma/: __init__.py
py_qroma/comm_io/: qcio_serial.py  qcio_serial_async.py  qcio_serial_b64.py  qcio_serial_old.py
py_qroma/qc_file_system/: list_filesystem_root.py  qfs_message_factory.py  show_filedetails.py  upload_file.py  upload_then_check_filedetails.py
py_qroma/qroma_comm/: qc_message_factory.py  qcio_base.py  qcio_bluetooth.py  qcio_serial.py  qcio_serial_b64.py  qcio_serial_old.py  qroma_monitor.py  reset_device.py  utils.py
py_qroma/qroma_comm_proto/: file_system_commands_pb2.py  qroma_comm_config_commands_pb2.py  qroma_comm_pb2.py  qroma_config_pb2.py  qroma_core_pb2.py  qroma_streams_pb2.py  qroma_types_pb2.py
py_qroma/test_resources/: 120bytes.txt  2400bytes.txt  240bytes.txt  dev_settings.py  qroma_hat.dgsr
tests/qc_file_system/: start_file_upload_but_dont_finish_then_wait_for_buffer_reset.py  upload_largeish_file_at_reasonable_rate_and_check_for_success.py
tests/qroma_comm/: send_junk_then_wait_for_buffer_reset.py
utils/: py_qroma_filestream_async.py  settings.py
