[tool.poetry]
name = "py-qroma"
version = "0.1.1"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
readme = "README.md"
packages = [{include = "py_qroma"}]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
protobuf = "~3.20.1"
aioserial = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
